<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/txt_header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:background="@color/red_bg_header"
        android:gravity="center"
        android:text="@string/all_employees"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <ImageButton
        android:id="@+id/btn_add_employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:src="@android:drawable/ic_menu_add" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_header"
        android:layout_margin="8dp"
        android:id="@+id/relative_edit_company"
        tools:context="${relativePackage}.${activityClass}" >

        <EditText
            android:id="@+id/txt_edit_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_name"
            android:layout_marginTop="24dp"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearance"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/txt_edit_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_edit_company_name"
            android:layout_marginTop="8dp"
            android:hint="@string/address"
            android:inputType="text"
            android:lines="2"
            android:maxLines="2"
            android:textAppearance="?android:attr/textAppearance"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/txt_edit_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_edit_address"
            android:layout_marginTop="8dp"
            android:hint="@string/website"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearance"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/txt_edit_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_edit_website"
            android:layout_marginTop="8dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textAppearance="?android:attr/textAppearance"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_edit_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_edit_phone_number"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="2dp"
            android:text="@string/edit"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txt_empty_list_employees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_edit_company"
        android:layout_centerInParent="true"
        android:layout_margin="4dp"
        android:gravity="center"
        android:text="@string/no_employee_working_for_this_company_add_a_new_one_by_clicking_the_add_button_on_the_top_right"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/darker_gray"
        android:visibility="gone" />

    <ListView
        android:id="@+id/list_employees"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relative_edit_company"
        android:layout_margin="4dp"
        android:divider="@android:drawable/divider_horizontal_bright"
        android:dividerHeight="0.5dp"
        android:listSelector="@android:drawable/list_selector_background" />

</RelativeLayout>